WIP: basic styling of mission, footer, nav, section_choice

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -117,7 +117,7 @@ ar:
           answer: 'نحن ننظر بشكل دائم إذا ما كانت المعلومات في كلارات لاتزال معاصرة. لأنه بهذه الطريقة  فقط يمكننا مساعدة الأطفال والشباب والأسر واللاجئين. فإذا لم تكن المعلومات لاتزال صحيحة فإنه يتم  تحديثها أي أننا نستبدلها. '
           question: هل المعلومات في كلارات حديثة؟
         question_7:
-          answer: بعض العروض في <b>كلارات الأسرة</b> و<b>كلارات اللاجئين</b> يمكن الاستفادة منها من  كل الأنحاء. سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق الهاتف أو الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الاستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين</b> تجد قريبا عروضا للعديد من المدن الكبيرة في ألمانيا. وهي حاليا برلين، هامبورغ، ميونخ، دورتموند، دوسلدورف، كولن، نورينبيرغ، وشتوتغارت. أما في <b>كلارات الأسرة</b> فقد بدأنا ببرلين. هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضاً أكثر. وقريباً سيكون لمدن كبرى أخرى في ألمانيا.
+          answer: بعض العروض في <b>كلارات الأسرة</b> و<b>كلارات اللاجئين</b> يمكن الاستفادة منها من  كل الأنحاء. سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق الهاتف أو الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الاستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين</b> تجد قريبا عروضا للعديد من المدن الكبيرة في ألمانيا. وهي حاليا برلين، وكولونيا ودوسلدورف. أما في <b>كلارات الأسرة</b> فقد بدأنا ببرلين. هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضا أكثر. وقريبا سيكون لمدن كبرى أخرى في ألمانيا.
           question: هل توجد كلارات لألمانيا كلها؟
         question_8:
           answer: كلارات تعرض لك المساعدة المتاحة بالقرب منك. فإنك تجد كل العروض مجمعة وبشكل عام. علاوة على ذلك فنحن نقول لك ما يجب عليك أن تفعل بالضبط لكي تحصل على المساعدة. ونحن نكتب دائما بلغة سهلة ويمكن للجميع ان يفهمها. حتى يتمكن الناس الذين لا يجيدون الألمانية من العثور على المساعدة؛ كما يمكنك أيضا أن تقرأ العروض بلغات أخرى عديدة. إذا أردت أن تعرف أكثر عن هذه اللغات؛ إضغط هنا %{ref_to_how_many_languages}.
@@ -580,11 +580,6 @@ ar:
         xxx: 
         zho: Zho
         zza: Zza
-      residency_status:
-        before_the_asylum_decision: 
-        with_a_residence_permit: 
-        with_deportation_decision: 
-        with_temporary_suspension_of_deportation: 
       section:
         family: Family
         refugees: Refugees
@@ -594,6 +589,11 @@ ar:
       sort_order:
         nearby: على مقربة
         relevance: الأهمية
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -666,9 +666,9 @@ ar:
         approach: كيف تقدم المساعدة؟
         gender: النوع
         language: اللغة
-        residency_status: 
         sort: رتب حسب
         target_audience: المساعدة لمن؟
+        residency_status: 
       option_any: سواء
       pagination:
         back: للخلف
@@ -850,33 +850,13 @@ ar:
     modal_create:
       js:
         erb:
-          success: تم إدخال الإيميل بنجاح!
+          success: 
     partials:
       banner:
         teaser:
           link: هنا يمكنك معرفة المزيد
           refugees: قريبا سيكون هناك عروضا للأجئين أيضا
           text: clarat.org يتم إنشائها
-      callout:
-        callout:
-          callout:
-            family:
-              how:
-                heading: 
-              who:
-                text: 
-            how:
-              text: 
-            refugees:
-              how:
-                heading: 
-              who:
-                text: 
-            what:
-              heading: 
-              text: 
-            who:
-              heading: 
       footer:
         about: معلومات عنا
         blog: مدونة
@@ -898,23 +878,6 @@ ar:
         twitter:
           anchor: تويتر
           href: https://twitter.com/claratpunktorg
-      header:
-        about: 
-        blog: 
-        contact: 
-        faq: 
-        languages:
-          ar: 
-          de: 
-          en: 
-          fa: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
-      hero:
-        claim:
-          family: مساعدة للأطفال والمراهقين و الأسرة
       modal:
         beta_modal:
           link: ارسل لنا ببساطة رسالة بريد إليكتروني
@@ -924,7 +887,6 @@ ar:
             قريبا سوف نقوم بتجميع عروض مساعدات أيضا لمدن أخري. مساعدتك تسرنا:
             هل لاحظت شيئا ما؛ وترى أنه يمكننا تحسينه؟
             أو شيئا غير صحيح؟ إذن
-        more_information_overlay: 
         send: 
         unavailable_location_modal: |
           لموقعك يوجد في كلارات حاليا عروض مساعدات عن طريق التليفون أو الإنترنت فقط
@@ -932,6 +894,7 @@ ar:
           مثلا عن طريق اللإيميل أو عن طريق الدردشة
           سوف نخبرك بكل سرور بمجرد أن يكون في كلارات مساعدات بالقرب منك
           لذلك سجل عنوان بريدك الإليكتروني هنا
+        more_information_overlay: 
       nav_lang:
         legal_title: في كلارات، لا يمكن قراءة النص القانوني إلا باللغة الألمانية.
         title: |-
@@ -969,6 +932,61 @@ ar:
               family: إلى <span class="top-bar__emphasis">كلارات اللاجئين</span> تحول
               refugees: إلى <span class="top-bar__emphasis">كلارات الأسرة</span> تحول
         title: ترجمة فورية
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: 
+          de: 
+          en: 
+          fa: 
+          fr: 
+          pl: 
+          ru: 
+          tr: 
+      hero:
+        claim:
+          family: مساعدة للأطفال والمراهقين و الأسرة
+      callout:
+        callout:
+          how:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          what:
+            family:
+              heading: 
+              text: 
+            refugees:
+              heading: 
+              text: 
+          who:
+            family:
+              text: 
+              heading: 
+            refugees:
+              heading: 
+              text: 
+            heading: 
+          callout:
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+                text: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
     widget:
       category_headline: 
   offer:
@@ -1006,15 +1024,9 @@ ar:
             female: فقط للبنات والسيدات
             girls_only: فقط للبنات والسيدات
             male: فقط للصبيان والرجال
-          residency_status:
-            before_the_asylum_decision: في قضية اللجوء
-            with_a_residence_permit: بتصريح إقامة
-            with_deportation_decision: بقرار الترحيل
-            with_temporary_suspension_of_deportation: بإذن إقامة مؤقت (دولدونج)
           target_audience:
             children: للأطفال والشباب
             family_children: للأطفال والشبان
-            family_everyone: 
             family_nuclear_family: للأسر
             family_parents: للآباء
             family_parents_to_be: لمن سوف يصيرون والدين
@@ -1023,13 +1035,19 @@ ar:
             nuclear_family: للأسر
             parents: للآباء
             pregnant_woman: للحوامل
+            relatives: للمعارف والأقارب
+            family_everyone: 
             refugees_children: للأجئين الأطفال
             refugees_families: للأسرة اللاجئة
             refugees_general: للاجئين
             refugees_parents: للاجئين من الآباء
             refugees_parents_to_be: للاجئين الذين سيصيرون قريباً آباء
             refugees_uf: للاجئين غير المصحوبين
-            relatives: للمعارف والأقارب
+          residency_status:
+            before_the_asylum_decision: في قضية اللجوء
+            with_a_residence_permit: بتصريح إقامة
+            with_deportation_decision: بقرار الترحيل
+            with_temporary_suspension_of_deportation: بإذن إقامة مؤقت (دولدونج)
       map_sidebar:
         map_output_searchresults: إظهار بطاقة نتائج البحث
       noscript_warning: |
@@ -1257,29 +1275,6 @@ ar:
     faq:
       title: أسئلة شائعة
     home:
-      callout:
-        "#{@current_section}":
-          who:
-            text: 
-        family:
-          how:
-            heading: 
-          who:
-            text: 
-        how:
-          heading: 
-          text: 
-        refugees:
-          how:
-            heading: 
-          who:
-            text: 
-        what:
-          heading: 
-          text: 
-        who:
-          heading: 
-          text: 
       how:
         heading: كيف تعمل كلارات؟
         text: أكتب المشكلة التي تحتاح مساعدة في حلها, او التي تقلقك. يمكنك أيضا أن تختار من الموضوعات الموجودة لدينا, فتري في الحال كل العروض التي تقدم الدعم بالقرب منك. وكذلك تعرف أيضا, كيف تحصل على المساعدة و بأي  وسيلة إتصال, سواء عن طريق التليفون أو إرسال إيميل أو الذهاب الي عنوان ما
@@ -1404,7 +1399,6 @@ ar:
     impressum: هيئة التحرير
     kontakt: إتصال
     liste: القائمة
-    liste-de-services: 
     new: جديد
     offers: عروض
     organizations: منظمة
@@ -1417,11 +1411,11 @@ ar:
     unsubscribe: unsubscribe
     update_requests: طلبات-تحديث
     users: مستخدم
-    widget: 
     widget-handbook-germany: 
     widget-hg: 
     widget-start-with-a-friend: 
     widget-swaf: 
+    liste-de-services: 
   shareds:
     forms:
       fill_field: من فضلك إملأ هذه الخانة
