--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1044,11 +1044,6 @@ de:
         xxx: Xxx
         zho: Zho
         zza: Zza
-      residency_status:
-        before_the_asylum_decision: Before the asylum decision
-        with_a_residence_permit: With a residence permit
-        with_deportation_decision: With deportation decision
-        with_temporary_suspension_of_deportation: With temporary suspension of deportation
       section:
         family: Family
         refugees: Refugees
@@ -1058,6 +1053,11 @@ de:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+      residency_status:
+        before_the_asylum_decision: Before the asylum decision
+        with_a_residence_permit: With a residence permit
+        with_deportation_decision: With deportation decision
+        with_temporary_suspension_of_deportation: With temporary suspension of deportation
   formtastic:
     required: required
   free: 
@@ -1133,9 +1133,9 @@ de:
         approach: Auf welchem Weg?
         gender: Geschlecht
         language: Sprache
-        residency_status: Aufenthaltsstatus
         sort: Sortieren nach
         target_audience: Hilfe für wen?
+        residency_status: Aufenthaltsstatus
       option_any: egal
       pagination:
         back: Zurück
@@ -1342,26 +1342,6 @@ de:
           link: Hier erfährst du mehr
           refugees: Bald auch Angebote für Flüchtlinge
           text: clarat.org wird gerade aufgebaut
-      callout:
-        callout:
-          callout:
-            family:
-              how:
-                heading: 
-              who:
-                text: 
-            how:
-              text: 
-            refugees:
-              how:
-                heading: 
-              who:
-                text: 
-            what:
-              heading: 
-              text: 
-            who:
-              heading: 
       footer:
         about: Über uns
         blog: Blog
@@ -1383,23 +1363,6 @@ de:
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
-      header:
-        about: 
-        blog: 
-        contact: 
-        faq: 
-        languages:
-          ar: 
-          de: 
-          en: 
-          fa: 
-          fr: 
-          pl: 
-          ru: 
-          tr: 
-      hero:
-        claim:
-          family: Hilfe für Kinder, Jugendliche und Familien
       modal:
         beta_modal:
           link: schreibe uns einfach eine Nachricht.
@@ -1409,7 +1372,6 @@ de:
             Hilfsangebote für andere Städte. Über deine Hilfe freuen wir uns:
             Hast du etwas gesehen, das wir besser machen können? Oder
             funktioniert etwas nicht richtig? Dann
-        more_information_overlay: 
         send: 
         unavailable_location_modal: |
           Für deinen Standort gibt es bei clarat aktuell nur Telefon-Angebote
@@ -1417,6 +1379,7 @@ de:
           Zum Beispiel per E-Mail oder in einem Chat. Wir geben dir gerne
           Bescheid, sobald es bei clarat auch Hilfe in deiner Nähe gibt.
           Trage dazu deine E-Mail-Adresse hier ein.
+        more_information_overlay: 
       nav_lang:
         legal_title: 
         title: 
@@ -1451,6 +1414,61 @@ de:
               family: zu <span class="top-bar__emphasis">clarat refugees</span> wechseln
               refugees: zu <span class="top-bar__emphasis">clarat family</span> wechseln
         title: Wähle deine Sprache
+      header:
+        about: 
+        blog: 
+        contact: 
+        faq: 
+        languages:
+          ar: 
+          de: 
+          en: 
+          fa: 
+          fr: 
+          pl: 
+          ru: 
+          tr: 
+      hero:
+        claim:
+          family: Hilfe für Kinder, Jugendliche und Familien
+      callout:
+        callout:
+          how:
+            family:
+              heading: Wie funktioniert clarat family?
+              text: 'Gib dein Problem in das Suchfeld ein und den Ort, an dem du suchst. Klicke auf die Lupe. Du bekommst die Hilfen in deiner Nähe auf einen Blick angezeigt. '
+            refugees:
+              heading: Wie funktioniert clarat refugees?
+              text: Gib dein Problem in das Suchfeld ein und den Ort, an dem du suchst. Klicke auf die Lupe. Du bekommst die Hilfen in deiner Nähe auf einen Blick angezeigt.
+          what:
+            family:
+              heading: Was findest du hier?
+              text: 'Alle Infos zu Hilfen in deiner Nähe. Bei Problemen aus folgenden Bereichen: Familie, Gesundheit, Lernen & Arbeiten und Gewalt & Kriminalität.'
+            refugees:
+              heading: Was findest du hier?
+              text: 'Alle Infos zu Hilfen in deiner Nähe. Bei Problemen aus folgenden Bereichen: Asyl & Recht, Familie, Gesundheit, Lernen & Arbeiten und Gewalt & Kriminalität.'
+          who:
+            family:
+              text: Alle Familien in Deutschland. Eltern, ihre Kinder und Schwangere finden hier Hilfe. Und auch Freunde und Verwandte.
+              heading: Wer findet hier Hilfe?
+            refugees:
+              heading: Wer findet hier Hilfe?
+              text: Alle Menschen, die nach Deutschland geflüchtet sind. Auch geflüchtete Kinder und Jugendliche. Und Menschen, die Hilfe für Flüchtlinge suchen.
+            heading: 
+          callout:
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+                text: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
     widget:
       category_headline: 
   offer:
@@ -1485,15 +1503,9 @@ de:
             female: nur für Mädchen und Frauen
             girls_only: nur für Mädchen und Frauen
             male: nur für Jungen und Männer
-          residency_status:
-            before_the_asylum_decision: im Asylverfahren
-            with_a_residence_permit: mit Aufenthaltserlaubnis
-            with_deportation_decision: mit Abschiebebescheid
-            with_temporary_suspension_of_deportation: mit Duldung
           target_audience:
             children: für Kinder und Jugendliche
             family_children: für Kinder und Jugendliche
-            family_everyone: 
             family_nuclear_family: für Familien
             family_parents: für Eltern
             family_parents_to_be: für werdende Eltern
@@ -1502,13 +1514,19 @@ de:
             nuclear_family: für Familien
             parents: für Eltern
             pregnant_woman: für Schwangere
+            relatives: für Bekannte und Verwandte
+            family_everyone: 
             refugees_children: für geflüchtete Kinder
             refugees_families: für geflüchtete Familien
             refugees_general: für Flüchtlinge
             refugees_parents: für geflüchtete Eltern
             refugees_parents_to_be: für geflüchtete werdende Eltern
             refugees_uf: für unbegleitete Flüchtlinge
-            relatives: für Bekannte und Verwandte
+          residency_status:
+            before_the_asylum_decision: im Asylverfahren
+            with_a_residence_permit: mit Aufenthaltserlaubnis
+            with_deportation_decision: mit Abschiebebescheid
+            with_temporary_suspension_of_deportation: mit Duldung
       map_sidebar:
         map_output_searchresults: Kartenausgabe der Suchergebnisse
       noscript_warning: |
@@ -1778,29 +1796,6 @@ de:
     faq:
       title: Häufige Fragen
     home:
-      callout:
-        "#{@current_section}":
-          who:
-            text: 
-        family:
-          how:
-            heading: Wie funktioniert clarat family?
-          who:
-            text: Alle Familien in Deutschland. Eltern, ihre Kinder und Schwangere finden hier Hilfe. Und auch Freunde und Verwandte.
-        how:
-          heading: 
-          text: "Gib dein Problem in das Suchfeld ein und den Ort, an dem du suchst. Klicke auf die Lupe. Du bekommst die Hilfen in deiner Nähe auf einen Blick angezeigt. \n"
-        refugees:
-          how:
-            heading: Wie funktioniert clarat refugees?
-          who:
-            text: Alle Menschen, die nach Deutschland geflüchtet sind. Auch geflüchtete Kinder und Jugendliche. Und Menschen, die Hilfe für Flüchtlinge suchen.
-        what:
-          heading: Was findest du hier?
-          text: "Alle Infos zu Hilfen in deiner Nähe. Bei Problemen aus folgenden Bereichen: Familie, Gesundheit, Lernen & Arbeiten und Gewalt & Kriminalität. \n"
-        who:
-          heading: Wer findet hier Hilfe?
-          text: 
       how:
         heading: Wie funktioniert clarat?
         text: |
@@ -1943,7 +1938,6 @@ de:
     impressum: impressum
     kontakt: kontakt
     liste: liste
-    liste-de-services: liste-de-services
     new: new
     offers: angebote
     organizations: organisationen
@@ -1956,11 +1950,11 @@ de:
     unsubscribe: unsubscribe
     update_requests: update_requests
     users: nutzer
-    widget: widget
     widget-handbook-germany: widget-handbook-germany
     widget-hg: widget-hg
     widget-start-with-a-friend: widget-start-with-a-friend
     widget-swaf: widget-swaf
+    liste-de-services: liste-de-services
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
