Add final Hamburger button, images for Mission, Heros

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1416,6 +1416,7 @@ ar:
     widget-start-with-a-friend: 
     widget-swaf: 
     liste-de-services: 
+    refugees: 
   shareds:
     forms:
       fill_field: من فضلك إملأ هذه الخانة
