--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1955,6 +1955,7 @@ de:
     widget-start-with-a-friend: widget-start-with-a-friend
     widget-swaf: widget-swaf
     liste-de-services: liste-de-services
+    refugees: refugees
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
