--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1558,6 +1558,7 @@ en:
     widget-start-with-a-friend: 
     widget-swaf: 
     liste-de-services: 
+    refugees: 
   shareds:
     forms:
       fill_field: Please fill out this field
