--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -1455,6 +1455,7 @@ fa:
     widget-start-with-a-friend: 
     widget-swaf: 
     liste-de-services: 
+    refugees: 
   shareds:
     forms:
       fill_field: لطفا اینجا را پر کن
