--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1486,6 +1486,7 @@ fr:
     widget-start-with-a-friend: 
     widget-swaf: 
     liste-de-services: 
+    refugees: 
   shareds:
     forms:
       fill_field: veuillez remplir ce champ
