--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1534,6 +1534,7 @@ pl:
     widget-start-with-a-friend: 
     widget-swaf: 
     liste-de-services: 
+    refugees: 
   shareds:
     forms:
       fill_field: Proszę wypełnij to pole
