--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1527,6 +1527,7 @@ ru:
     widget-start-with-a-friend: 
     widget-swaf: 
     liste-de-services: 
+    refugees: 
   shareds:
     forms:
       fill_field: Пожалуйста, заполни это поле
