--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1423,6 +1423,7 @@ tr:
     widget-start-with-a-friend: 
     widget-swaf: 
     liste-de-services: 
+    refugees: 
   shareds:
     forms:
       fill_field: Lütfen bu alanı doldur
